--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
         <div class="container">
-          <h1>Countdown Timer</h1>
+          <h1>COUNTDOWN TIMER</h1>
           <div class="input-container">
             <label for="date-input">Set Date and Time to Countdown</label>
             <input type="datetime-local" id="date-input"><br><br>
